--- a/index.html
+++ b/index.html
@@ -1,40 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | FAQ Accordion Card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+<body class="center">
+  <div class="design-container center">
+    <div class="img-container">
+      <img class="svg-box" src="./images/illustration-box-desktop.svg">
+      <img class="svg-desktop" src="./images/illustration-woman-online-desktop.svg">
+    </div>
+    <div class="faq-container center">
+      <h1>FAQ</h1>
+      <div class="question-container">
+        <p>
+          How many team members can I invite?
+        </p>
+        <img src="./images/icon-arrow-down.svg">
+      </div>
+      <div class="line"></div>
+      <p> You can invite up to 2 additional users on the Free plan. There is no limit on
+        team members for the Premium plan.</p>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+      <div class="question-container">
+        <p>
+          What is the maximum file upload size?
+        </p>
+        <img src="./images/icon-arrow-down.svg">
+      </div>
+      <div class="line"></div>
+      <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+      <div class="question-container">
+        <p>
+          Can I cancel my subscription?
+        </p>
+        <img src="./images/icon-arrow-down.svg">
+      </div>
+      <div class="line"></div>
+      <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+      <div class="question-container">
+        <p>
+          Do you provide additional support?
+        </p>
+        <img src="./images/icon-arrow-down.svg">
+      </div>
+      <div class="line"></div>
+      <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
 </body>
+
 </html>
