--- a/index.html
+++ b/index.html
@@ -9,56 +9,92 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | FAQ Accordion Card</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="center">
-  <div class="design-container center">
-    <div class="img-container">
-      <img class="svg-box" src="./images/illustration-box-desktop.svg">
-      <img class="svg-desktop" src="./images/illustration-woman-online-desktop.svg">
+<body>
+  <section class="card">
+    <img src="/images/illustration-box-desktop.svg" alt="square box" class="card-box">
+    <div class="card-image">
+      <img src="/images/illustration-woman-online-desktop.svg" alt="illustration-woman-online-desktop">
     </div>
-    <div class="faq-container center">
+    <div class="card-text">
       <h1>FAQ</h1>
-      <div class="question-container">
-        <p>
-          How many team members can I invite?
-        </p>
-        <img src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="line"></div>
-      <p> You can invite up to 2 additional users on the Free plan. There is no limit on
-        team members for the Premium plan.</p>
 
-      <div class="question-container">
-        <p>
-          What is the maximum file upload size?
-        </p>
-        <img src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="line"></div>
-      <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+      <div class="accordion">
+        <div class="accordion-item">
+          <h2>
+            <button class="accordion-question">
+              How many members can I invite?
+            </button>
+          </h2>
+          <div class="accordion-collapse">
+            <div class="accordion-content">
+              You can invite up to 2 additional users on the Free plan. There is no limit on
+              team members for the Premium plan.
+            </div>
+          </div>
+        </div>
 
-      <div class="question-container">
-        <p>
-          Can I cancel my subscription?
-        </p>
-        <img src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="line"></div>
-      <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+        <div class="accordion-item">
+          <h2>
+            <button class="accordion-question">
+              What is the maximum file upload size?
+            </button>
+          </h2>
+          <div class="accordion-collapse">
+            <div class="accordion-content">
+              No more than 2GB. All files in your account must fit your allotted storage space.
+            </div>
+          </div>
+        </div>
 
-      <div class="question-container">
-        <p>
-          Do you provide additional support?
-        </p>
-        <img src="./images/icon-arrow-down.svg">
-      </div>
-      <div class="line"></div>
-      <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        <div class="accordion-item">
+          <h2>
+            <button class="accordion-question">
+              How do I reset my password?
+            </button>
+          </h2>
+          <div class="accordion-collapse">
+            <div class="accordion-content">
+              Click "Forgot Password" from the login page or "Change password" from your profile page. A reset link will be emailed to you.
+            </div>
+          </div>
+        </div>
 
+        <div class="accordion-item">
+          <h2>
+            <button class="accordion-question">
+              Can I cancel my subscription?
+            </button>
+          </h2>
+          <div class="accordion-collapse">
+            <div class="accordion-content">
+              Yes! Send us a message and we’ll process your request no questions asked.
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2>
+            <button class="accordion-question">
+              Do you provide additional support?
+            </button>
+          </h2>
+          <div class="accordion-collapse">
+            <div class="accordion-content">
+              Chat and email support is available 24/7. Phone lines are open during normal business hours.
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
+
+
+  <script src="script.js"></script>
 </body>
 
 </html>
